--- a/Game Dev Project 1 - 2D/Game Dev Project 1 - 2D.vcxproj
+++ b/Game Dev Project 1 - 2D/Game Dev Project 1 - 2D.vcxproj
@@ -95,6 +95,10 @@
     <ClInclude Include="TileMap.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\colorShading.frag" />
+    <None Include="Shaders\colorShading.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
